fixed width on ios

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,7 +24,7 @@ form {
   background: rgb(25, 21, 28);
   padding: 10px;
   margin-bottom: 20px;
-  width: 60%;
+  max-width: 600px;
   margin: 20px auto;
   margin-top: 30px;
   border-radius: 10px;
@@ -74,7 +74,7 @@ button:hover {
 
 .book-card {
     background: rgb(14, 9, 20);
-    width: 600px;
+    max-width: 600px;
     margin: 20px auto;
     padding: 20px;
     border-radius: 10px;
